# auroragraph

./: .clang-format  .gitignore  AuroraCLI.vcxproj  AuroraCore.vcxproj  AuroraGraph.sln  AuroraGraphGUI.vcxproj  AuroraTests.vcxproj  CMakeLists.txt  LICENSE  LICENSE.third_party.md  README.md  install.sh
bench/: benchmark_queries.cpp  benchmark_scaling.cpp
docs/: CLI.md  CODE_REVIEW.md  GUI.md
gui/: CMakeLists.txt
gui/include/aurora/gui/: agql_highlighter.hpp  app.hpp  dialogs.hpp  edge_item.hpp  graph_view.hpp  job.hpp  job_runner.hpp  main_window.hpp  node_item.hpp  query_editor.hpp  result_table.hpp  side_panel.hpp  status_bar.hpp
gui/resources/: aurora.qrc  qdark.qss
include/: json.hpp
include/aurora/: version.hpp
include/aurora/agql/: ast.hpp  errors.hpp  exec.hpp  lexer.hpp  parser.hpp  token.hpp
include/aurora/algo/: bfs.hpp  components.hpp  dfs.hpp  dijkstra.hpp  pagerank.hpp  parallel.hpp
include/aurora/cli/: colors.hpp  commands.hpp  platform.hpp  printer.hpp  repl.hpp
include/aurora/common/: errors.hpp  types.hpp  util.hpp  value.hpp
include/aurora/core/: edge.hpp  graph.hpp  index.hpp  node.hpp  storage.hpp
include/aurora/storage/: mempool.hpp  recovery.hpp  snapshot.hpp  wal.hpp
src/agql/: exec.cpp  lexer.cpp  parser.cpp
src/algo/: bfs.cpp  components.cpp  dfs.cpp  dijkstra.cpp  pagerank.cpp  parallel.cpp
src/cli/: aurora_cli.cpp  commands.cpp  platform.cpp  printer.cpp  repl.cpp
src/core/: graph.cpp  index.cpp  storage.cpp
src/gui/: agql_highlighter.cpp  app.cpp  dialogs.cpp  edge_item.cpp  graph_view.cpp  job.cpp  job_runner.cpp  main.cpp  main_window.cpp  node_item.cpp  query_editor.cpp  result_table.cpp  side_panel.cpp  status_bar.cpp
src/storage/: mempool.cpp  recovery.cpp  snapshot.cpp  wal.cpp
tests/: CMakeLists.txt  smoke.cpp  test_agql_exec_basic.cpp  test_agql_exec_mutation.cpp  test_agql_lexer.cpp  test_agql_lexer_ext.cpp  test_agql_match_index.cpp  test_agql_parser.cpp  test_agql_parser_ext.cpp  test_algo_bfs_dfs.cpp  test_algo_components.cpp  test_algo_dijkstra.cpp  test_algo_pagerank.cpp  test_graph_basic.cpp  test_index.cpp  test_mempool.cpp  test_parallel_algo.cpp  test_snapshot_recovery.cpp  test_storage_jsonl.cpp  test_wal.cpp
